--- a/数据处理.ipynb
+++ b/数据处理.ipynb
@@ -9209,7 +9209,7 @@
    "metadata": {},
    "source": [
     "```r\n",
-    "separate(data, col, into, regex...)\n",
+    "extract(data, col, into, regex...)\n",
     "```\n",
     "regex指定要根据什么正则表达式进行拆分（捕获分组）。"
    ]
@@ -10855,7 +10855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 读取文件数据"
+    "## 读写文件数据"
    ]
   },
   {
@@ -11061,7 +11061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`excel_sheets()`函数可以获取文件的表单名，只要输入Excel的路径即可："
+    "`excel_sheets()`函数可以获取文件的表单名（一个字符向量），函数只要输入Excel的路径即可："
    ]
   },
   {
@@ -11158,6 +11158,78 @@
    "source": [
     "datalist2 <- map(sheets, ~ read_xlsx(path, sheet = .x, col_names = TRUE))\n",
     "print(datalist2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 批量写出Excel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果需要将数据写出Excel文件，writexl包的`write_xlsx()`函数是个不错的选择：\n",
+    "```r\n",
+    "write_xlsx(\n",
+    "  x,\n",
+    "  path = tempfile(fileext = \".xlsx\"),\n",
+    "  col_names = TRUE,\n",
+    "  format_headers = TRUE,\n",
+    "  use_zip64 = FALSE\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在此基础上可以实现批量写出Excel文件，用到walk系列函数（不关注输出结果）："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#! 一种是借助列表进行循环操作\n",
+    "library(writexl)\n",
+    "library(tidyverse)\n",
+    "df_list <- as_tibble(iris) %>%\n",
+    "  group_split(Species)\n",
+    "filenames <- str_c(\"data/writeexcel1/\", levels(iris$Species), \".xlsx\")\n",
+    "walk2(df_list, filenames, ~ write_xlsx(x = ..1, path = ..2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#! 另一种是借助嵌套数据进行循环操作\n",
+    "library(writexl)\n",
+    "library(tidyverse)\n",
+    "as_tibble(mpg) %>%\n",
+    "  mutate(manufacturer = fct(manufacturer)) %>%\n",
+    "  group_nest(manufacturer) %>%\n",
+    "  mutate(manufacturer = str_c(\n",
+    "    \"data/writeexcel2/\", manufacturer, \".xlsx\"\n",
+    "  )\n",
+    "  ) %>%\n",
+    "  pwalk(~ write_xlsx(x = ..2, path = ..1))"
    ]
   },
   {
@@ -11460,7 +11532,7 @@
    ],
    "source": [
     "library(mice)\n",
-    "data(sleep, package=\"VIM\") \n",
+    "data(sleep, package = \"VIM\") \n",
     "md.pattern(sleep, plot = FALSE)"
    ]
   },
@@ -13369,9 +13441,9 @@
     "\n",
     "参数解释：\n",
     "- `.f`：表示一个函数，可以用以下方式指定：\n",
-    "    - 命名函数，例如mean等。\n",
+    "    - 命名函数，例如`mean`等。\n",
     "    - 匿名函数，例如`\\(x) x + 1`或`function(x) x + 1`，为了书写的简洁，更推荐第一种。\n",
-    "    - purrr风格的公式，例如`~ .x + 1`，`~ log(..1 + ..2 + ..3)`。\n",
+    "    - purrr风格的公式，例如`~ .x + 1`，`~ ... * 2`，`~ log(..1 + ..2 + ..3)`。\n",
     "- `...`：传递给映射函数的其他参数。不过现在通常不建议使用`...`来传递额外的（常量）参数给.f 函数。这是因为这种方式可能会导致参数传递不清晰，容易混淆哪些参数属于哪个函数，也可能导致错误消息不够明确。相反，使用简写的匿名函数。这样更容易理解哪些参数属于哪个函数，并且通常会生成更好的错误消息。"
    ]
   },
@@ -13401,9 +13473,9 @@
     "library(tidyverse)\n",
     "set.seed(77)\n",
     "df <- tibble(\n",
-    "    a = rnorm(10),\n",
-    "    b = rnorm(10),\n",
-    "    c = rnorm(10)\n",
+    "  a = rnorm(10),\n",
+    "  b = rnorm(10),\n",
+    "  c = rnorm(10)\n",
     ")\n",
     "\n",
     "print(map_dbl(df, mean))\n",
@@ -13492,8 +13564,8 @@
     }
    ],
    "source": [
-    "mu = c(5,10,-3)\n",
-    "sigma = c(1,5,10)\n",
+    "mu  <-  c(5, 10, -3)\n",
+    "sigma  <-  c(1, 5, 10)\n",
     "print(map2(mu, sigma, rnorm, n = 5))"
    ]
   },
@@ -13549,13 +13621,32 @@
    "source": [
     "set.seed(99)\n",
     "tibb <- tibble(\n",
-    "    n = c(1, 3, 5),\n",
-    "    mean = c(5, 10, -3),\n",
-    "    sd = c(1, 5, 10)\n",
+    "  n = c(1, 3, 5),\n",
+    "  mean = c(5, 10, -3),\n",
+    "  sd = c(1, 5, 10)\n",
     ")\n",
     "print(\n",
-    "    pmap(tibb, ~ rnorm(..1, ..2, ..3))\n",
+    "  pmap(tibb, ~ rnorm(..1, ..2, ..3))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### walk系列函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "walk系列函数与map系列函数的思想是一样的，将函数依次作用到序列上。但与map不同的是，walk系列函数并不关注返回的结果，所以walk系列函数更加适用于批量保存数据绘图文件等：\n",
+    "```r\n",
+    "walk(.x, .f, ..., .progress = FALSE)\n",
+    "walk2(.x, .y, .f, ..., .progress = FALSE)\n",
+    "walk(.l, .f, ..., .progress = FALSE)\n",
+    "```"
    ]
   }
  ],
