--- a/数据处理.ipynb
+++ b/数据处理.ipynb
@@ -13440,10 +13440,10 @@
     "- `map_dfr(.x, .f)`：打包成**数据框列表**，在通过`bind_rows`按行合并为一个数据框。\n",
     "\n",
     "参数解释：\n",
-    "- `.f`：表示一个函数，可以用以下方式指定：\n",
+    "- `.f`：表示一个函数，可以用以下方式指定（更推荐前两种，purrr风格的书写有一定的局限性）：\n",
     "    - 命名函数，例如`mean`等。\n",
     "    - 匿名函数，例如`\\(x) x + 1`或`function(x) x + 1`，为了书写的简洁，更推荐第一种。\n",
-    "    - purrr风格的公式，例如`~ .x + 1`，`~ ... * 2`，`~ log(..1 + ..2 + ..3)`。\n",
+    "    - purrr风格的公式，例如`~ .x + 1`。\n",
     "- `...`：传递给映射函数的其他参数。不过现在通常不建议使用`...`来传递额外的（常量）参数给.f 函数。这是因为这种方式可能会导致参数传递不清晰，容易混淆哪些参数属于哪个函数，也可能导致错误消息不够明确。相反，使用简写的匿名函数。这样更容易理解哪些参数属于哪个函数，并且通常会生成更好的错误消息。"
    ]
   },
@@ -13496,7 +13496,8 @@
     "```r\n",
     "map2(.x, .y, .f, ..., .progress = FALSE)\n",
     "map2_*(.x, .y, .f, ..., .progress = FALSE)\n",
-    "```"
+    "```\n",
+    "同样，这里的.f函数可以选择三种不同的写法。如果要写成purrr风格的，注意函数只能传入.x，.y参数，例如`~ log(.x + .y)`"
    ]
   },
   {
@@ -13573,7 +13574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pmap()`函数可以应用多元函数到多个序列的每组元素。也就是说，可以实现对数据框的逐行迭代。"
+    "`pmap()`函数可以应用多元函数到多个序列的每组元素。"
    ]
   },
   {
@@ -13590,12 +13591,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pmap()`函数也有后缀的形式。不过同样在涉及到数据框的相应计算时，不如使用tidyverse的思想。"
+    "`pmap()`与`map2()`传入两个序列（.x，.y）的思想不一样。其`.l`参数需要指定一个向量列表。<span style = 'color:red'><strong>.l的长度决定了.f将被调用的参数数量</strong></span>。如果参数没有命名，则按位置提供参数；如果命名了，则按名称提供。而这种按名称提供的思想，purrr风格的公式可以给出答案：可以写例如`~ log(..1 + ..2 + ..3)`的形式，或者`~ mean(c(...))`的形式（`...`传入的是x个单值对象，必须要套一个`c(...)`合并为一个向量对象，才能正确传参）。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 5 6 7 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(tidyverse)\n",
+    "numlist <- list(a = 1:4, b = 5:8, c = 9:12)\n",
+    "mapresult <- pmap_dbl(numlist, ~ mean(c(...)))\n",
+    "print(mapresult)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "数据框是`.l`的一个重要特例。它将导致.f为每一行被调用一次。也就是说 pmap(df, f) 相当于 f(df[1,1],df[1,2],...,d[1,m]), f(df[2,1],df[2,2],...,d[2,m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tibble: 3 × 3\u001b[39m\n",
+      "      n  mean    sd\n",
+      "  \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m     1     5     1\n",
+      "\u001b[90m2\u001b[39m     3    10     5\n",
+      "\u001b[90m3\u001b[39m     5    -\u001b[31m3\u001b[39m    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "tibb <- tibble(\n",
+    "  n = c(1, 3, 5),\n",
+    "  mean = c(5, 10, -3),\n",
+    "  sd = c(1, 5, 10)\n",
+    ")\n",
+    "print(tibb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -13607,26 +13670,21 @@
      "output_type": "stream",
      "text": [
       "[[1]]\n",
-      "[1] 5.213963\n",
+      "[1] 4.497808\n",
       "\n",
       "[[2]]\n",
-      "[1] 12.39829 10.43914 12.21929\n",
+      "[1] 10.657656  9.605415 14.433924\n",
       "\n",
       "[[3]]\n",
-      "[1]  -6.628379  -1.773260 -11.638452   1.896243  -6.641169\n",
+      "[1]  -1.8302873   0.1863009  -8.8179068   4.1453271 -11.2525943\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "set.seed(99)\n",
-    "tibb <- tibble(\n",
-    "  n = c(1, 3, 5),\n",
-    "  mean = c(5, 10, -3),\n",
-    "  sd = c(1, 5, 10)\n",
-    ")\n",
+    "set.seed(100)\n",
     "print(\n",
-    "  pmap(tibb, ~ rnorm(..1, ..2, ..3))\n",
+    "  pmap(tibb, ~ rnorm(n = ..1, mean = ..2, sd = ..3))\n",
     ")"
    ]
   },
