--- a/数据处理.ipynb
+++ b/数据处理.ipynb
@@ -1876,6 +1876,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "有时候虽然已经有了tsibble对象，但是它的index或者key需要发生改变（这是非常可能的），此时`update_tsibble()`函数可以解决该问题：\n",
+    "```r\n",
+    "update_tsibble(\n",
+    "  x,\n",
+    "  key,\n",
+    "  index,\n",
+    "  regular = is_regular(x),\n",
+    "  validate = TRUE,\n",
+    "  .drop = key_drop_default(x)\n",
+    ")\n",
+    "```\n",
+    "其中参数：\n",
+    "- `x`：一个tsibble对象。\n",
+    "- `key`：更新唯一确定时间索引的变量（即分组索引列）。如果解除原有键（即生成空键）使用NULL，生成多个变量键使用c()。\n",
+    "- `index`：更新时间索引的变量。\n",
+    "- `regular`：是否为规则的时间间隔（TRUE）或不规则的（FALSE）。如果为TRUE，则间隔由索引列的最大公约数确定。\n",
+    "- `validate`：参数为TRUE时，表示验证每个键或每个键变量组合是否会导致唯一的时间索引（即产生有效的tsibble）。可以指定FALSE以跳过检查。\n",
+    "- `.drop`：如果为TRUE，空键组将被删除。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tsibble: 6 x 8 [!]\u001b[39m\n",
+      "\u001b[90m# Key:       Symbol [1]\u001b[39m\n",
+      "  Symbol Date        Open  High   Low Close Adj_Close  Volume\n",
+      "  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m  \u001b[3m\u001b[90m<date>\u001b[39m\u001b[23m     \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m     \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m   \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m GOOG   2018-01-02 \u001b[4m1\u001b[24m048. \u001b[4m1\u001b[24m067. \u001b[4m1\u001b[24m045. \u001b[4m1\u001b[24m065      \u001b[4m1\u001b[24m065  1\u001b[4m2\u001b[24m\u001b[4m3\u001b[24m\u001b[4m7\u001b[24m600\n",
+      "\u001b[90m2\u001b[39m GOOG   2018-01-03 \u001b[4m1\u001b[24m064. \u001b[4m1\u001b[24m086. \u001b[4m1\u001b[24m063. \u001b[4m1\u001b[24m082.     \u001b[4m1\u001b[24m082. 1\u001b[4m4\u001b[24m\u001b[4m3\u001b[24m\u001b[4m0\u001b[24m200\n",
+      "\u001b[90m3\u001b[39m GOOG   2018-01-04 \u001b[4m1\u001b[24m088  \u001b[4m1\u001b[24m094. \u001b[4m1\u001b[24m084. \u001b[4m1\u001b[24m086.     \u001b[4m1\u001b[24m086. 1\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m4\u001b[24m600\n",
+      "\u001b[90m4\u001b[39m GOOG   2018-01-05 \u001b[4m1\u001b[24m094  \u001b[4m1\u001b[24m104. \u001b[4m1\u001b[24m092  \u001b[4m1\u001b[24m102.     \u001b[4m1\u001b[24m102. 1\u001b[4m2\u001b[24m\u001b[4m7\u001b[24m\u001b[4m9\u001b[24m100\n",
+      "\u001b[90m5\u001b[39m GOOG   2018-01-08 \u001b[4m1\u001b[24m102. \u001b[4m1\u001b[24m111. \u001b[4m1\u001b[24m102. \u001b[4m1\u001b[24m107.     \u001b[4m1\u001b[24m107. 1\u001b[4m0\u001b[24m\u001b[4m4\u001b[24m\u001b[4m7\u001b[24m600\n",
+      "\u001b[90m6\u001b[39m GOOG   2018-01-09 \u001b[4m1\u001b[24m109. \u001b[4m1\u001b[24m111. \u001b[4m1\u001b[24m101. \u001b[4m1\u001b[24m106.     \u001b[4m1\u001b[24m106.  \u001b[4m9\u001b[24m\u001b[4m0\u001b[24m\u001b[4m2\u001b[24m500\n"
+     ]
+    }
+   ],
+   "source": [
+    "#! 可以看出数据index时间索引并非等间距的\n",
+    "library(fpp3)\n",
+    "library(tidyverse)\n",
+    "before <- gafa_stock %>%\n",
+    "  filter(Symbol == \"GOOG\", year(Date) >= 2018)\n",
+    "print(head(before))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"Provided data has an irregular interval, results should be treated with caution. Computing ACF by observation.\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tsibble: 6 x 3 [1]\u001b[39m\n",
+      "\u001b[90m# Key:       Symbol [1]\u001b[39m\n",
+      "  Symbol      lag      acf\n",
+      "  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m  \u001b[3m\u001b[90m<cf_lag>\u001b[39m\u001b[23m    \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m GOOG          1  0.010\u001b[4m7\u001b[24m \n",
+      "\u001b[90m2\u001b[39m GOOG          2 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m102\u001b[39m  \n",
+      "\u001b[90m3\u001b[39m GOOG          3  0.109  \n",
+      "\u001b[90m4\u001b[39m GOOG          4  0.008\u001b[4m4\u001b[24m\u001b[4m0\u001b[24m\n",
+      "\u001b[90m5\u001b[39m GOOG          5 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m0\u001b[39m\u001b[31m75\u001b[4m5\u001b[24m\u001b[39m \n",
+      "\u001b[90m6\u001b[39m GOOG          6 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m0\u001b[39m\u001b[31m85\u001b[4m0\u001b[24m\u001b[39m \n"
+     ]
+    }
+   ],
+   "source": [
+    "error <- gafa_stock %>%\n",
+    "  filter(Symbol == \"GOOG\", year(Date) >= 2018) %>%\n",
+    "  mutate(diff = difference(Close)) %>%\n",
+    "  ACF(diff, lag_max = 48)\n",
+    "print(head(error))\n",
+    "#! 在时间序列分析中，很多方法（如自相关函数ACF）都基于数据的等间隔性进行开发。如果数据的时间间隔不是规则的，那么这些方法可能不会提供准确的结果。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tsibble: 6 x 3 [1]\u001b[39m\n",
+      "\u001b[90m# Key:       Symbol [1]\u001b[39m\n",
+      "  Symbol      lag      acf\n",
+      "  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m  \u001b[3m\u001b[90m<cf_lag>\u001b[39m\u001b[23m    \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m GOOG          1  0.010\u001b[4m7\u001b[24m \n",
+      "\u001b[90m2\u001b[39m GOOG          2 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m102\u001b[39m  \n",
+      "\u001b[90m3\u001b[39m GOOG          3  0.109  \n",
+      "\u001b[90m4\u001b[39m GOOG          4  0.008\u001b[4m4\u001b[24m\u001b[4m0\u001b[24m\n",
+      "\u001b[90m5\u001b[39m GOOG          5 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m0\u001b[39m\u001b[31m75\u001b[4m5\u001b[24m\u001b[39m \n",
+      "\u001b[90m6\u001b[39m GOOG          6 -\u001b[31m0\u001b[39m\u001b[31m.\u001b[39m\u001b[31m0\u001b[39m\u001b[31m85\u001b[4m0\u001b[24m\u001b[39m \n"
+     ]
+    }
+   ],
+   "source": [
+    "#step 正确的做法是重新确定等间距的时间索引列\n",
+    "correction <- gafa_stock %>%\n",
+    "  filter(Symbol == \"GOOG\", year(Date) >= 2018) %>%\n",
+    "  mutate(trading_day = row_number()) %>%\n",
+    "  update_tsibble(index = trading_day, regular = TRUE)%>%     #! 重新指定\n",
+    "  mutate(diff = difference(Close)) %>% \n",
+    "  ACF(diff, lag_max = 48)\n",
+    "print(head(correction))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "可以使用操作tibble对象的函数操作tsibble对象，例如dplyr的`mutate()`，`filter()`，`select()`，`summarise()`等函数。tsibble和tibble有一些不同，在选择列时，即使没有选择key列，最终结果仍然会包括这些index，key列（这样是为了确保每一行都包含键和索引的唯一组合）："
    ]
   },
