--- a/数据处理.ipynb
+++ b/数据处理.ipynb
@@ -4583,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -4591,69 +4591,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>new_partyid</th><th scope=col>n</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>other      </td><td> 154</td></tr>\n",
-       "\t<tr><td>Don't know </td><td>   1</td></tr>\n",
-       "\t<tr><td>Other party</td><td> 393</td></tr>\n",
-       "\t<tr><td>rep        </td><td>5346</td></tr>\n",
-       "\t<tr><td>ind        </td><td>8409</td></tr>\n",
-       "\t<tr><td>dem        </td><td>7180</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " new\\_partyid & n\\\\\n",
-       " <fct> & <int>\\\\\n",
-       "\\hline\n",
-       "\t other       &  154\\\\\n",
-       "\t Don't know  &    1\\\\\n",
-       "\t Other party &  393\\\\\n",
-       "\t rep         & 5346\\\\\n",
-       "\t ind         & 8409\\\\\n",
-       "\t dem         & 7180\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 2\n",
-       "\n",
-       "| new_partyid &lt;fct&gt; | n &lt;int&gt; |\n",
-       "|---|---|\n",
-       "| other       |  154 |\n",
-       "| Don't know  |    1 |\n",
-       "| Other party |  393 |\n",
-       "| rep         | 5346 |\n",
-       "| ind         | 8409 |\n",
-       "| dem         | 7180 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  new_partyid n   \n",
-       "1 other        154\n",
-       "2 Don't know     1\n",
-       "3 Other party  393\n",
-       "4 rep         5346\n",
-       "5 ind         8409\n",
-       "6 dem         7180"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[90m# A tibble: 6 × 2\u001b[39m\n",
+      "  new_partyid     n\n",
+      "  \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m       \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m ind          \u001b[4m8\u001b[24m409\n",
+      "\u001b[90m2\u001b[39m dem          \u001b[4m7\u001b[24m180\n",
+      "\u001b[90m3\u001b[39m rep          \u001b[4m5\u001b[24m346\n",
+      "\u001b[90m4\u001b[39m Other party   393\n",
+      "\u001b[90m5\u001b[39m other         154\n",
+      "\u001b[90m6\u001b[39m Don't know      1\n",
       "[1] \"other\"       \"Don't know\"  \"Other party\" \"rep\"         \"ind\"        \n",
       "[6] \"dem\"        \n"
      ]
@@ -4666,11 +4615,14 @@
     "    \"rep\" = c(\"Strong republican\", \"Not str republican\"),\n",
     "    \"ind\" = c(\"Ind,near rep\", \"Independent\", \"Ind,near dem\"),\n",
     "    \"dem\" = c(\"Not str democrat\", \"Strong democrat\")\n",
-    "    )\n",
-    "  ) %>%\n",
-    "  count(new_partyid)\n",
-    "df\n",
-    "print(levels(df$new_partyid))"
+    "  )) %>%\n",
+    "  count(new_partyid, sort = TRUE)\n",
+    "print(df)\n",
+    "\n",
+    "df %>%\n",
+    "  pull(new_partyid) %>%\n",
+    "  levels() %>%\n",
+    "  print()"
    ]
   },
   {
@@ -4693,13 +4645,13 @@
     "  w = NULL,\n",
     "  other_level = \"Other\",\n",
     "  ties.method = c(\"min\", \"average\", \"first\", \"last\", \"random\", \"max\")\n",
-    "  ) # 合并除了n个最常见的水平之外的所有水平（如果n < 0，则是最不常见的水平）\n",
+    "  ) # 合并除了n个最常见的水平之外的所有水平（即一共有n+1个水平）。（如果n < 0，则是最不常见的水平）\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -4707,74 +4659,34 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>f</th><th scope=col>n</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>compact   </td><td>47</td></tr>\n",
-       "\t<tr><td>midsize   </td><td>41</td></tr>\n",
-       "\t<tr><td>pickup    </td><td>33</td></tr>\n",
-       "\t<tr><td>subcompact</td><td>35</td></tr>\n",
-       "\t<tr><td>suv       </td><td>62</td></tr>\n",
-       "\t<tr><td>others    </td><td>16</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " f & n\\\\\n",
-       " <fct> & <int>\\\\\n",
-       "\\hline\n",
-       "\t compact    & 47\\\\\n",
-       "\t midsize    & 41\\\\\n",
-       "\t pickup     & 33\\\\\n",
-       "\t subcompact & 35\\\\\n",
-       "\t suv        & 62\\\\\n",
-       "\t others     & 16\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 2\n",
-       "\n",
-       "| f &lt;fct&gt; | n &lt;int&gt; |\n",
-       "|---|---|\n",
-       "| compact    | 47 |\n",
-       "| midsize    | 41 |\n",
-       "| pickup     | 33 |\n",
-       "| subcompact | 35 |\n",
-       "| suv        | 62 |\n",
-       "| others     | 16 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  f          n \n",
-       "1 compact    47\n",
-       "2 midsize    41\n",
-       "3 pickup     33\n",
-       "4 subcompact 35\n",
-       "5 suv        62\n",
-       "6 others     16"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tibble: 6 × 2\u001b[39m\n",
+      "  f              n\n",
+      "  \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m      \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m compact       47\n",
+      "\u001b[90m2\u001b[39m midsize       41\n",
+      "\u001b[90m3\u001b[39m pickup        33\n",
+      "\u001b[90m4\u001b[39m subcompact    35\n",
+      "\u001b[90m5\u001b[39m suv           62\n",
+      "\u001b[90m6\u001b[39m others        16\n"
+     ]
     }
    ],
    "source": [
-    "lump.n <- mutate(mpg, class = fct_lump_n(class, n = 5, other_level = \"others\")) # 选出5个最常见的水平\n",
-    "fct_count(lump.n$class)"
+    "lump_n <- mpg %>%\n",
+    "  mutate(class = fct_lump_n(class, n = 5, other_level = \"others\")) # 选出5个最常见的水平\n",
+    "\n",
+    "lump_n %>%\n",
+    "  pull(class) %>%\n",
+    "  fct_count() %>%\n",
+    "  print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -4782,73 +4694,30 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 7 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>f</th><th scope=col>n</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>compact   </td><td>47</td></tr>\n",
-       "\t<tr><td>midsize   </td><td>41</td></tr>\n",
-       "\t<tr><td>minivan   </td><td>11</td></tr>\n",
-       "\t<tr><td>pickup    </td><td>33</td></tr>\n",
-       "\t<tr><td>subcompact</td><td>35</td></tr>\n",
-       "\t<tr><td>suv       </td><td>62</td></tr>\n",
-       "\t<tr><td>others    </td><td> 5</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 7 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " f & n\\\\\n",
-       " <fct> & <int>\\\\\n",
-       "\\hline\n",
-       "\t compact    & 47\\\\\n",
-       "\t midsize    & 41\\\\\n",
-       "\t minivan    & 11\\\\\n",
-       "\t pickup     & 33\\\\\n",
-       "\t subcompact & 35\\\\\n",
-       "\t suv        & 62\\\\\n",
-       "\t others     &  5\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 7 × 2\n",
-       "\n",
-       "| f &lt;fct&gt; | n &lt;int&gt; |\n",
-       "|---|---|\n",
-       "| compact    | 47 |\n",
-       "| midsize    | 41 |\n",
-       "| minivan    | 11 |\n",
-       "| pickup     | 33 |\n",
-       "| subcompact | 35 |\n",
-       "| suv        | 62 |\n",
-       "| others     |  5 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  f          n \n",
-       "1 compact    47\n",
-       "2 midsize    41\n",
-       "3 minivan    11\n",
-       "4 pickup     33\n",
-       "5 subcompact 35\n",
-       "6 suv        62\n",
-       "7 others      5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tibble: 7 × 2\u001b[39m\n",
+      "  f              n\n",
+      "  \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m      \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
+      "\u001b[90m1\u001b[39m compact       47\n",
+      "\u001b[90m2\u001b[39m midsize       41\n",
+      "\u001b[90m3\u001b[39m minivan       11\n",
+      "\u001b[90m4\u001b[39m pickup        33\n",
+      "\u001b[90m5\u001b[39m subcompact    35\n",
+      "\u001b[90m6\u001b[39m suv           62\n",
+      "\u001b[90m7\u001b[39m others         5\n"
+     ]
     }
    ],
    "source": [
-    "lump.min <- mutate(mpg, class = fct_lump_min(class, min = 6, other_level = \"others\"))\n",
-    "fct_count(lump.min$class)"
+    "lump_min <- mpg %>% \n",
+    "  mutate(class = fct_lump_min(class, min = 6, other_level = \"others\"))\n",
+    "\n",
+    "lump_min %>%\n",
+    "  pull(class) %>%\n",
+    "  fct_count() %>%\n",
+    "  print()"
    ]
   },
   {
